# rust-binary-project-template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  lint.yml
src/: main.rs
src/handlers/: config.rs
src/utils/: mod.rs  pathing.rs
