[package]
name = "rust-binary-project-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = [ "derive" ] }
toml = "0.5.8"
color-eyre = "0.6.1"

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "rust-binary-project-template"
