[package]
name = "rust-binary-project-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = [ "derive" ] }
toml = "0.8.20"
color-eyre = "0.6.3"

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "rust-binary-project-template"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
